--- a/prototype/repair.conf
+++ b/prototype/repair.conf
@@ -1,9 +1,38 @@
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/i2c_master_top_more_buggy.v
 src_file=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/sdram_controller_buggy_var.v
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/fsm_full/fsm_full_buggy_var.v
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/decoder_3_to_8/decoder_3_to_8_buggy_num.v
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/lshift_reg_buggy_num.v
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/first_counter/first_counter_buggy_num.v
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/first_counter_overflow/first_counter_buggy_overflow.v
+
+# test_bench=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/tst_bench_top_t1.v
 test_bench=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/sdram_controller_tb_t1.v
+# test_bench=/home/hammada/projects/verilog_repair/benchmarks/fsm_full/fsm_full_tb_t1.v
+# test_bench=/home/hammada/projects/verilog_repair/benchmarks/decoder_3_to_8/decoder_3_to_8_tb_t1.v
+# test_bench=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/lshift_reg_tb_t1.v
+# test_bench=/home/hammada/projects/verilog_repair/benchmarks/first_counter/first_counter_tb_t3.v
+# test_bench=/home/hammada/projects/verilog_repair/benchmarks/first_counter_overflow/first_counter_tb_t3.v
+
+# include_dir=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c
+
+# dependent_files=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/wb_master_model.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/i2c_slave_model.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/i2c_master_byte_ctrl.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/i2c_master_bit_ctrl.v
+
+oracle=oracle_sdramcontroller.txt
+# oracle=oracle_fsmfull.txt
+# oracle=oracle_decoder3_to_8.txt
+# oracle=oracle_lshiftreg.txt
+# oracle=oracle_firstcounter.txt
+# oracle=oracle_firstcounteroverflow.txt
+# oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/oracle.txt
+
 gens=5
-popsize=200
+popsize=50
+restarts=1
+deletion_rate=0.3
+insertion_rate=0.3
+replacement_rate=0.4
 fault_loc=True
 control_flow=True
-oracle=oracle_sdramcontroller.txt
 limit_transitive_dependency_set=True
 dependency_set_max=4
