added minimization of patchlist post bugfix

--- a/prototype/repair.conf
+++ b/prototype/repair.conf
@@ -1,49 +1,55 @@
 # src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/i2c_master_top_buggy_v2.v
 # src_file=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/sdram_controller_buggy_var.v
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/fsm_full/fsm_full_buggy_var.v
+src_file=/home/hammada/projects/verilog_repair/benchmarks/fsm_full/fsm_full_buggy_var.v
 # src_file=/home/hammada/projects/verilog_repair/benchmarks/decoder_3_to_8/decoder_3_to_8_buggy_num.v
 # src_file=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/lshift_reg_buggy_num.v
 # src_file=/home/hammada/projects/verilog_repair/benchmarks/first_counter/first_counter_buggy_num.v
 # src_file=/home/hammada/projects/verilog_repair/benchmarks/first_counter_overflow/first_counter_buggy_overflow.v
 # src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/f_permutation_buggy_v3.v
 # src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/pairing/tate_pairing_buggy_v2.v
-src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/out_stage_buggy_v2.v
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/out_stage_buggy_v2.v
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/vga_lcd/vga_wb_slave_buggy.v
 
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/tst_bench_top_t1.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/sdram_controller_tb_t1.v
-# test_bench=/home/hammada/projects/verilog_repair/benchmarks/fsm_full/fsm_full_tb_t1.v
+test_bench=/home/hammada/projects/verilog_repair/benchmarks/fsm_full/fsm_full_tb_t1.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/decoder_3_to_8/decoder_3_to_8_tb_t1.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/lshift_reg_tb_t1.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/first_counter/first_counter_tb_t3.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/first_counter_overflow/first_counter_tb_t3.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/test_f_permutation_t1.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/opencores/pairing/test_duursma_lee_algo_t1.v
-test_bench=/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/RS_dec_tb_t1.v
+# test_bench=/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/RS_dec_tb_t1.v
+# test_bench=/home/hammada/projects/verilog_repair/benchmarks/opencores/vga_lcd/test_bench_top_t1.v
 
 # include_dir=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c
 # include_dir=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core
 # include_dir=/home/hammada/projects/verilog_repair/benchmarks/opencores/pairing
-include_dir=/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder
+# include_dir=/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder
+# include_dir=/home/hammada/projects/verilog_repair/benchmarks/opencores/vga_lcd
 
 ### Comma separated
 # dependent_files=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/wb_master_model.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/i2c_slave_model.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/i2c_master_byte_ctrl.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/i2c_master_bit_ctrl.v
 # dependent_files=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/rconst.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/round.v
 # dependent_files=/home/hammada/projects/verilog_repair/benchmarks/opencores/pairing/f32m.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/pairing/f33m.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/pairing/f36m.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/pairing/f3m.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/pairing/f3.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/pairing/fun.v
-dependent_files=/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/input_syndromes.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/transport_in2out.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/BM_lamda.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/lamda_roots.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/Omega_Phy.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/error_correction.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/RS_dec.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/DP_RAM.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/GF_matrix_ascending_binary.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/GF_matrix_dec.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/GF_mult_add_syndromes.v
+# dependent_files=/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/input_syndromes.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/transport_in2out.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/BM_lamda.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/lamda_roots.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/Omega_Phy.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/error_correction.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/RS_dec.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/DP_RAM.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/GF_matrix_ascending_binary.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/GF_matrix_dec.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/GF_mult_add_syndromes.v
+# dependent_files=/home/hammada/projects/verilog_repair/benchmarks/opencores/vga_lcd/sync_check.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/vga_lcd/wb_b3_check.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/vga_lcd/wb_mast_model.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/vga_lcd/wb_slv_model.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/vga_lcd/vga_enh_top.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/vga_lcd/vga_wb_master.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/vga_lcd/vga_csm_pb.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/vga_lcd/vga_pgen.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/vga_lcd/vga_fifo.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/vga_lcd/vga_fifo_dc.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/vga_lcd/vga_clkgen.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/vga_lcd/generic_spram.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/vga_lcd/vga_tgen.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/vga_lcd/vga_colproc.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/vga_lcd/generic_dpram.v,/home/hammada/projects/verilog_repair/benchmarks/opencores/vga_lcd/vga_vtim.v
+
 
 # oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/oracle.txt
 # oracle=oracle_sdramcontroller.txt
-# oracle=oracle_fsmfull.txt
+oracle=oracle_fsmfull.txt
 # oracle=oracle_decoder3_to_8.txt
 # oracle=oracle_lshiftreg.txt
 # oracle=oracle_firstcounter.txt
 # oracle=oracle_firstcounteroverflow.txt
 # oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/oracle.txt
 # oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/pairing/oracle.txt
-oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/oracle.txt
+# oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/oracle.txt
+# oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/vga_lcd/oracle.txt
 
 gens=4
-popsize=500
+popsize=100
 restarts=1
 mutation_rate=0.65
 crossover_rate=0.35
