bug fixes, running experiments on this version

--- a/prototype/repair.conf
+++ b/prototype/repair.conf
@@ -1,40 +1,54 @@
 # src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/i2c_master_top_buggy_v2.v
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/sdram_controller_buggy_var.v
 # src_file=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/sdram_controller_githubbug.v
 # src_file=/home/hammada/projects/verilog_repair/benchmarks/first_counter/first_counter_buggy_num.v
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/f_permutation_buggy_v3.v
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/pairing/tate_pairing_buggy_v2.v
 # src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/out_stage_buggy_v2.v
 # src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/vga_lcd/vga_wb_slave_buggy.v
 
-# test_bench=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/sdram_controller_tb_t1.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/first_counter_overflow/first_counter_tb_t3.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/test_f_permutation_t1.v
-# test_bench=/home/hammada/projects/verilog_repair/benchmarks/opencores/pairing/test_duursma_lee_algo_t1.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/RS_dec_tb_t1.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/opencores/vga_lcd/test_bench_top_t1.v
 
 fitness_mode=outputwires
 # fitness_mode=testcases
 
-
-# oracle=oracle_sdramcontroller.txt
 # oracle=oracle_firstcounter.txt
 # oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/oracle.txt
-# oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/pairing/oracle.txt
 # oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/oracle.txt
 # oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/vga_lcd/oracle.txt
 
-# # first counter overflow
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/first_counter_overflow/first_counter_buggy_overflow.v
-# test_bench=/home/hammada/projects/verilog_repair/benchmarks/first_counter/first_counter_tb_t3.v
-# eval_script=/home/hammada/projects/verilog_repair/benchmarks/first_counter_overflow/run.sh
-# orig_file=first_counter_overflow.v
-# proj_dir=/home/hammada/projects/verilog_repair/benchmarks/first_counter_overflow/
-# oracle=oracle_firstcounteroverflow.txt
+# pairing
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/pairing/tate_pairing_kgoliya_buggy1.v
+# test_bench=/home/hammada/projects/verilog_repair/benchmarks/opencores/pairing/test_duursma_lee_algo_t1.v
+# eval_script=/home/hammada/projects/verilog_repair/benchmarks/opencores/pairing/run.sh
+# orig_file=tate_pairing.v
+# proj_dir=/home/hammada/projects/verilog_repair/benchmarks/opencores/pairing/
+# oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/pairing/oracle.txt
+
+# sha3
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/f_permutation_buggy_v3.v
+# test_bench=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/test_f_permutation_t1.v
+# eval_script=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/run.sh
+# orig_file=f_
+
+# sdram_controller
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/sdram_controller_kgoliya_buggy2.v
+# test_bench=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/sdram_controller_tb_t1.v
+# eval_script=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/run.sh
+# orig_file=sdram_controller.v
+# proj_dir=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/
+# oracle=oracle_sdramcontroller.txt
+
+# first counter overflow
+src_file=/home/hammada/projects/verilog_repair/benchmarks/first_counter_overflow/first_counter_overflow_kgoliya_buggy1.v
+test_bench=/home/hammada/projects/verilog_repair/benchmarks/first_counter/first_counter_tb_t3.v
+eval_script=/home/hammada/projects/verilog_repair/benchmarks/first_counter_overflow/run.sh
+orig_file=first_counter_overflow.v
+proj_dir=/home/hammada/projects/verilog_repair/benchmarks/first_counter_overflow/
+oracle=oracle_firstcounteroverflow.txt
 
 # fsm_full
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/fsm_full/fsm_full_buggy_var.v
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/fsm_full/fsm_full_wadden_buggy2.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/fsm_full/fsm_full_tb_t1.v
 # eval_script=/home/hammada/projects/verilog_repair/benchmarks/fsm_full/run.sh
 # orig_file=fsm_full.v
@@ -42,20 +56,20 @@ fitness_mode=outputwires
 # oracle=oracle_fsmfull.txt
 
 # lshift_reg
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/lshift_reg_buggy_num.v
-# test_bench=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/lshift_reg_tb_t1.v
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/lshift_reg_wadden_buggy1.v
+# test_bench=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/lshift_reg_tb.v
 # eval_script=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/run.sh
 # orig_file=lshift_reg.v
 # proj_dir=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/
 # oracle=oracle_lshiftreg.txt
 
 # decoder_3_to_8
-src_file=/home/hammada/projects/verilog_repair/benchmarks/decoder_3_to_8/decoder_3_to_8_buggy_var.v
-test_bench=/home/hammada/projects/verilog_repair/benchmarks/decoder_3_to_8/decoder_3_to_8_tb_t1.v
-eval_script=/home/hammada/projects/verilog_repair/benchmarks/decoder_3_to_8/run.sh
-orig_file=decoder_3_to_8.v
-proj_dir=/home/hammada/projects/verilog_repair/benchmarks/decoder_3_to_8/
-oracle=oracle_decoder3_to_8.txt
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/decoder_3_to_8/decoder_3_to_8_buggy_var.v
+# test_bench=/home/hammada/projects/verilog_repair/benchmarks/decoder_3_to_8/decoder_3_to_8_tb_t1.v
+# eval_script=/home/hammada/projects/verilog_repair/benchmarks/decoder_3_to_8/run.sh
+# orig_file=decoder_3_to_8.v
+# proj_dir=/home/hammada/projects/verilog_repair/benchmarks/decoder_3_to_8/
+# oracle=oracle_decoder3_to_8.txt
 
 # mux_4_1
 # src_file=/home/hammada/projects/verilog_repair/benchmarks/mux_4_1/mux_4_1_buggy_var.v
@@ -74,15 +88,16 @@ oracle=oracle_decoder3_to_8.txt
 # oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/amber/oracle.txt
 
 # i2c
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/i2c_master_top_buggy.v
+# Notes: for i2c_slave_model, remove debug $display statements since they do not work too well with PyVerilog
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/i2c_master_bit_ctrl_kgoliya_buggy1.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/tst_bench_top_t1.v
 # eval_script=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/run.sh
-# orig_file=i2c_master_top.v
+# orig_file=i2c_master_bit_ctrl.v
 # proj_dir=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c
 # oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/oracle.txt
 
-gens=5
-popsize=1000
+gens=8
+popsize=5000
 restarts=1
 mutation_rate=0.7
 crossover_rate=0.3
