running experiments on this version

--- a/prototype/repair.conf
+++ b/prototype/repair.conf
@@ -13,12 +13,19 @@ fitness_mode=outputwires
 # fitness_mode=testcases
 
 # oracle=oracle_firstcounter.txt
-# oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/oracle.txt
 # oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/oracle.txt
 # oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/vga_lcd/oracle.txt
 
+# reed_solomon_decoder
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/BM_lamda_ssscrazy_buggy1.v
+# test_bench=/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/RS_dec_tb_t1.v
+# eval_script=/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/run.sh
+# orig_file=BM_lamda.v
+# proj_dir=/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/
+# oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/oracle.txt
+
 # pairing
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/pairing/tate_pairing_kgoliya_buggy1.v
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/pairing/tate_pairing_wadden_buggy1.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/opencores/pairing/test_duursma_lee_algo_t1.v
 # eval_script=/home/hammada/projects/verilog_repair/benchmarks/opencores/pairing/run.sh
 # orig_file=tate_pairing.v
@@ -26,29 +33,39 @@ fitness_mode=outputwires
 # oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/pairing/oracle.txt
 
 # sha3
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/f_permutation_buggy_v3.v
-# test_bench=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/test_f_permutation_t1.v
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/keccak_kgoliya_buggy1.v
+# test_bench=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/test_keccak_t1.v
 # eval_script=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/run.sh
-# orig_file=f_
+# orig_file=keccak.v
+# proj_dir=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/
+# oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/oracle.txt
 
 # sdram_controller
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/sdram_controller_kgoliya_buggy2.v
-# test_bench=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/sdram_controller_tb_t1.v
-# eval_script=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/run.sh
-# orig_file=sdram_controller.v
-# proj_dir=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/
-# oracle=oracle_sdramcontroller.txt
+src_file=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/sdram_controller_wadden_buggy1.v
+test_bench=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/sdram_controller_tb_t1.v
+eval_script=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/run.sh
+orig_file=sdram_controller.v
+proj_dir=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/
+oracle=oracle_sdramcontroller.txt
 
 # first counter overflow
-src_file=/home/hammada/projects/verilog_repair/benchmarks/first_counter_overflow/first_counter_overflow_kgoliya_buggy1.v
-test_bench=/home/hammada/projects/verilog_repair/benchmarks/first_counter/first_counter_tb_t3.v
-eval_script=/home/hammada/projects/verilog_repair/benchmarks/first_counter_overflow/run.sh
-orig_file=first_counter_overflow.v
-proj_dir=/home/hammada/projects/verilog_repair/benchmarks/first_counter_overflow/
-oracle=oracle_firstcounteroverflow.txt
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/first_counter_overflow/first_counter_overflow_wadden_buggy1.v
+# test_bench=/home/hammada/projects/verilog_repair/benchmarks/first_counter/first_counter_tb_t3.v
+# eval_script=/home/hammada/projects/verilog_repair/benchmarks/first_counter_overflow/run.sh
+# orig_file=first_counter_overflow.v
+# proj_dir=/home/hammada/projects/verilog_repair/benchmarks/first_counter_overflow/
+# oracle=oracle_firstcounteroverflow.txt
+
+# flip_flop
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/flip_flop/tff_wadden_buggy2.v
+# test_bench=/home/hammada/projects/verilog_repair/benchmarks/flip_flop/tff_tb.v
+# eval_script=/home/hammada/projects/verilog_repair/benchmarks/flip_flop/run.sh
+# orig_file=tff.v
+# proj_dir=/home/hammada/projects/verilog_repair/benchmarks/flip_flop
+# oracle=/home/hammada/projects/verilog_repair/benchmarks/flip_flop/oracle.txt
 
 # fsm_full
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/fsm_full/fsm_full_wadden_buggy2.v
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/fsm_full/fsm_full_ssscrazy_buggy1.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/fsm_full/fsm_full_tb_t1.v
 # eval_script=/home/hammada/projects/verilog_repair/benchmarks/fsm_full/run.sh
 # orig_file=fsm_full.v
@@ -56,15 +73,15 @@ oracle=oracle_firstcounteroverflow.txt
 # oracle=oracle_fsmfull.txt
 
 # lshift_reg
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/lshift_reg_wadden_buggy1.v
-# test_bench=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/lshift_reg_tb.v
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/lshift_reg_kgoliya_buggy1.v
+# test_bench=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/lshift_reg_tb_t1.v
 # eval_script=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/run.sh
 # orig_file=lshift_reg.v
 # proj_dir=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/
 # oracle=oracle_lshiftreg.txt
 
 # decoder_3_to_8
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/decoder_3_to_8/decoder_3_to_8_buggy_var.v
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/decoder_3_to_8/decoder_3_to_8_kgoliya_buggy1.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/decoder_3_to_8/decoder_3_to_8_tb_t1.v
 # eval_script=/home/hammada/projects/verilog_repair/benchmarks/decoder_3_to_8/run.sh
 # orig_file=decoder_3_to_8.v
@@ -72,7 +89,7 @@ oracle=oracle_firstcounteroverflow.txt
 # oracle=oracle_decoder3_to_8.txt
 
 # mux_4_1
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/mux_4_1/mux_4_1_buggy_var.v
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/mux_4_1/mux_4_1_kgoliya_buggy1.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/mux_4_1/mux_4_1_tb.v
 # eval_script=/home/hammada/projects/verilog_repair/benchmarks/mux_4_1/run.sh
 # orig_file=mux_4_1.v
@@ -89,10 +106,10 @@ oracle=oracle_firstcounteroverflow.txt
 
 # i2c
 # Notes: for i2c_slave_model, remove debug $display statements since they do not work too well with PyVerilog
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/i2c_master_bit_ctrl_kgoliya_buggy1.v
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/i2c_slave_model_wadden_buggy2.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/tst_bench_top_t1.v
 # eval_script=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/run.sh
-# orig_file=i2c_master_bit_ctrl.v
+# orig_file=i2c_slave_model.v
 # proj_dir=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c
 # oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/oracle.txt
 
