--- a/prototype/repair.conf
+++ b/prototype/repair.conf
@@ -9,12 +9,14 @@
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/RS_dec_tb_t1.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/opencores/vga_lcd/test_bench_top_t1.v
 
-fitness_mode=outputwires
-# fitness_mode=testcases
-
 # oracle=oracle_firstcounter.txt
 # oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/oracle.txt
 # oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/vga_lcd/oracle.txt
+
+fitness_mode=outputwires
+# fitness_mode=testcases
+
+# seed=repair_2020-09-24-15:16:49
 
 # reed_solomon_decoder
 # src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/BM_lamda_ssscrazy_buggy1.v
@@ -33,15 +35,15 @@ fitness_mode=outputwires
 # oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/pairing/oracle.txt
 
 # sha3
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/keccak_kgoliya_buggy1.v
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/round_ssscrazy_buggy1.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/test_keccak_t1.v
-# eval_script=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/run.sh
-# orig_file=keccak.v
+# eval_script=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/run_keccak.sh
+# orig_file=round.v
 # proj_dir=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/
-# oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/oracle.txt
+# oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/oracle_keccak.txt
 
 # sdram_controller
-src_file=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/sdram_controller_wadden_buggy1.v
+src_file=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/sdram_controller_wadden_buggy2.v
 test_bench=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/sdram_controller_tb_t1.v
 eval_script=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/run.sh
 orig_file=sdram_controller.v
@@ -49,7 +51,7 @@ proj_dir=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/
 oracle=oracle_sdramcontroller.txt
 
 # first counter overflow
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/first_counter_overflow/first_counter_overflow_wadden_buggy1.v
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/first_counter_overflow/first_counter_overflow_wadden_buggy2.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/first_counter/first_counter_tb_t3.v
 # eval_script=/home/hammada/projects/verilog_repair/benchmarks/first_counter_overflow/run.sh
 # orig_file=first_counter_overflow.v
@@ -65,7 +67,7 @@ oracle=oracle_sdramcontroller.txt
 # oracle=/home/hammada/projects/verilog_repair/benchmarks/flip_flop/oracle.txt
 
 # fsm_full
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/fsm_full/fsm_full_ssscrazy_buggy1.v
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/fsm_full/fsm_full_wadden_buggy1.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/fsm_full/fsm_full_tb_t1.v
 # eval_script=/home/hammada/projects/verilog_repair/benchmarks/fsm_full/run.sh
 # orig_file=fsm_full.v
@@ -73,7 +75,7 @@ oracle=oracle_sdramcontroller.txt
 # oracle=oracle_fsmfull.txt
 
 # lshift_reg
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/lshift_reg_kgoliya_buggy1.v
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/lshift_reg_wadden_buggy2.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/lshift_reg_tb_t1.v
 # eval_script=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/run.sh
 # orig_file=lshift_reg.v
@@ -81,7 +83,7 @@ oracle=oracle_sdramcontroller.txt
 # oracle=oracle_lshiftreg.txt
 
 # decoder_3_to_8
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/decoder_3_to_8/decoder_3_to_8_kgoliya_buggy1.v
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/decoder_3_to_8/decoder_3_to_8_wadden_buggy2.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/decoder_3_to_8/decoder_3_to_8_tb_t1.v
 # eval_script=/home/hammada/projects/verilog_repair/benchmarks/decoder_3_to_8/run.sh
 # orig_file=decoder_3_to_8.v
@@ -106,10 +108,10 @@ oracle=oracle_sdramcontroller.txt
 
 # i2c
 # Notes: for i2c_slave_model, remove debug $display statements since they do not work too well with PyVerilog
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/i2c_slave_model_wadden_buggy2.v
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/i2c_master_bit_ctrl_kgoliya_buggy1.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/tst_bench_top_t1.v
 # eval_script=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/run.sh
-# orig_file=i2c_slave_model.v
+# orig_file=i2c_master_bit_ctrl.v
 # proj_dir=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c
 # oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/oracle.txt
 
