--- a/prototype/repair.conf
+++ b/prototype/repair.conf
@@ -16,7 +16,7 @@
 fitness_mode=outputwires
 # fitness_mode=testcases # experimental
 
-# seed=repair_2020-10-14-11:25:36
+seed=repair_2020-09-22-16:01:26
 
 # reed_solomon_decoder
 # src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/out_stage_ssscrazy_buggy1.v
@@ -24,7 +24,7 @@ fitness_mode=outputwires
 # eval_script=/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/run.sh
 # orig_file=out_stage.v
 # proj_dir=/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/
-# oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/oracle.txt
+# oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/reed_solomon_decoder/oracle_quarter.txt
 
 # pairing
 # src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/pairing/tate_pairing_wadden_buggy2.v
@@ -35,28 +35,30 @@ fitness_mode=outputwires
 # oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/pairing/oracle.txt
 
 # sha3
-src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/round_ssscrazy_buggy1.v
-test_bench=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/test_keccak_t1.v
-eval_script=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/run_keccak.sh
-orig_file=round.v
-proj_dir=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/
-oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/oracle_keccak.txt
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/keccak_wadden_buggy1.v
+# test_bench=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/test_keccak_t1.v
+# eval_script=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/run_keccak.sh
+# orig_file=keccak.v
+# proj_dir=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/
+# oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throughput_core/oracle_keccak_quarter.txt
 
 # sdram_controller
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/sdram_controller_wadden_buggy2.v
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/sdram_controller_wadden_buggy1.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/sdram_controller_tb_t1.v
 # eval_script=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/run.sh
 # orig_file=sdram_controller.v
 # proj_dir=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/
-# oracle=oracle_sdramcontroller.txt
+# # oracle=oracle_sdramcontroller.txt
+# oracle=/home/hammada/projects/verilog_repair/benchmarks/sdram_controller/oracle_quarter.txt
 
 # first counter overflow
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/first_counter_overflow/first_counter_overflow_wadden_buggy2.v
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/first_counter_overflow/first_counter_overflow_kgoliya_buggy1.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/first_counter/first_counter_tb_t3.v
 # eval_script=/home/hammada/projects/verilog_repair/benchmarks/first_counter_overflow/run.sh
 # orig_file=first_counter_overflow.v
 # proj_dir=/home/hammada/projects/verilog_repair/benchmarks/first_counter_overflow/
-# oracle=oracle_firstcounteroverflow.txt
+# # oracle=oracle_firstcounteroverflow.txt
+# oracle=/home/hammada/projects/verilog_repair/benchmarks/first_counter_overflow/oracle.txt
 
 # flip_flop
 # src_file=/home/hammada/projects/verilog_repair/benchmarks/flip_flop/tff_wadden_buggy2.v
@@ -64,39 +66,42 @@ oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throu
 # eval_script=/home/hammada/projects/verilog_repair/benchmarks/flip_flop/run.sh
 # orig_file=tff.v
 # proj_dir=/home/hammada/projects/verilog_repair/benchmarks/flip_flop
-# oracle=/home/hammada/projects/verilog_repair/benchmarks/flip_flop/oracle.txt
+# oracle=/home/hammada/projects/verilog_repair/benchmarks/flip_flop/oracle_quarter.txt
 
 # fsm_full
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/fsm_full/fsm_full_ssscrazy_buggy1.v
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/fsm_full/fsm_full_ssscrazy_buggy2.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/fsm_full/fsm_full_tb_t1.v
 # eval_script=/home/hammada/projects/verilog_repair/benchmarks/fsm_full/run.sh
 # orig_file=fsm_full.v
 # proj_dir=/home/hammada/projects/verilog_repair/benchmarks/fsm_full/
-# oracle=oracle_fsmfull.txt
+# # oracle=oracle_fsmfull.txt
+# oracle=/home/hammada/projects/verilog_repair/benchmarks/fsm_full/oracle_quarter.txt
 
 # lshift_reg
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/lshift_reg_wadden_buggy2.v
-# test_bench=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/lshift_reg_tb_t1.v
-# eval_script=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/run.sh
-# orig_file=lshift_reg.v
-# proj_dir=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/
-# oracle=oracle_lshiftreg.txt
+src_file=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/lshift_reg_kgoliya_buggy1.v
+test_bench=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/lshift_reg_tb_t1.v
+eval_script=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/run.sh
+orig_file=lshift_reg.v
+proj_dir=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/
+oracle=oracle_lshiftreg.txt
+# oracle=/home/hammada/projects/verilog_repair/benchmarks/lshift_reg/oracle.txt
 
 # decoder_3_to_8
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/decoder_3_to_8/decoder_3_to_8_wadden_buggy1.v
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/decoder_3_to_8/decoder_3_to_8_wadden_buggy2.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/decoder_3_to_8/decoder_3_to_8_tb_t1.v
 # eval_script=/home/hammada/projects/verilog_repair/benchmarks/decoder_3_to_8/run.sh
 # orig_file=decoder_3_to_8.v
 # proj_dir=/home/hammada/projects/verilog_repair/benchmarks/decoder_3_to_8/
-# oracle=oracle_decoder3_to_8.txt
+# # oracle=oracle_decoder3_to_8.txt
+# oracle=/home/hammada/projects/verilog_repair/benchmarks/decoder_3_to_8/oracle.txt
 
 # mux_4_1
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/mux_4_1/mux_4_1_kgoliya_buggy1.v
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/mux_4_1/mux_4_1_wadden_buggy2.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/mux_4_1/mux_4_1_tb.v
 # eval_script=/home/hammada/projects/verilog_repair/benchmarks/mux_4_1/run.sh
 # orig_file=mux_4_1.v
 # proj_dir=/home/hammada/projects/verilog_repair/benchmarks/mux_4_1/
-# oracle=/home/hammada/projects/verilog_repair/benchmarks/mux_4_1/oracle.txt
+# oracle=/home/hammada/projects/verilog_repair/benchmarks/mux_4_1/oracle_new.txt
 
 # amber
 # src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/amber/a23_multiply_buggy.v
@@ -108,12 +113,12 @@ oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/sha3/low_throu
 
 # i2c
 # Notes: for i2c_slave_model, remove debug $display statements since they do not work too well with PyVerilog
-# src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/i2c_slave_model_wadden_buggy2.v
+# src_file=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/i2c_master_bit_ctrl_kgoliya_buggy1.v
 # test_bench=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/tst_bench_top_t1.v
 # eval_script=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/run.sh
-# orig_file=i2c_slave_model.v
+# orig_file=i2c_master_bit_ctrl.v
 # proj_dir=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c
-# oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/oracle.txt
+# oracle=/home/hammada/projects/verilog_repair/benchmarks/opencores/i2c/oracle_quarter.txt
 
 gens=8
 popsize=5000
